# updatable

./: .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.rst  pyproject.toml  requirements.txt  run_tests.py  setup.py  updatable.py
.github/: dependabot.yml
.github/workflows/: main.yml  publish.yml  test.yml
test/: test_console.py  test_parse.py  test_update.py  test_update_license.py  test_version.py  utils.py
test/fixtures/: pypi-package1.json  pypi-package2.json  pypi-package3-1.0.0.json  pypi-package3-2.0.0.json  pypi-package3-3.0.0.json  pypi-package3.json  pypi-package4.json  pypi-package5.json  pypi-package6.json  requirements-initial.txt
tests/: test_console.py  test_parse.py  test_update.py  test_update_license.py
tests/fixtures/: pypi-package1.json  pypi-package2.json  pypi-package5.json
updatable/: __init__.py  __main__.py  console.py  utils.py
